[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "fastapi-sessions>=0.3.2",
    "fastapi[standard]>=0.121.2",
    "httpx>=0.27.0",
    "langchain[anthropic]>=1.0.3",
    "langgraph>=1.0.2",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "trio>=0.32.0",
    "uvicorn[standard]>=0.38.0",
]
